30. angular - petinder - codelab04

--- a/src/app/layout/layout/layout.component.html
+++ b/src/app/layout/layout/layout.component.html
@@ -1,9 +1,8 @@
-<!--<router-outlet></router-outlet>-->
 
 <app-header></app-header>
 
-<div class="fader">     // ??
-  <router-outlet></router-outlet>   <!--//why add this?-->
+<div class="fader">
+  <router-outlet></router-outlet>
 </div>
 
 <app-footer></app-footer>
